--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "EPIC starter kit",
+  "name": "EPIC_starter_kit",
   "version": "1.0.0",
-  "description": "EPIC starter kit",
+  "description": "Start.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/gulp"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Nikolay Gromov",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nicothin/epic_start-kit"
+  },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
     "browser-sync": "^2.14.0",
