--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-mqpacker": "^5.0.1",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-concat": "^2.6.0",
     "gulp-file-include": "^0.14.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.0.3",
@@ -28,6 +29,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgmin": "^1.2.2",
+    "gulp-uglify": "^2.0.0",
     "imagemin-pngquant": "^5.0.0"
   },
   "config": {
