--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-mqpacker": "^5.0.1",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
     "gulp-file-include": "^0.14.0",
     "gulp-gh-pages": "^0.5.4",
@@ -29,6 +30,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgmin": "^1.2.2",
+    "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^2.0.0",
     "imagemin-pngquant": "^5.0.0"
   },
