--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-mqpacker": "^5.0.1",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-base64": "^0.1.3",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
     "gulp-file-include": "^0.14.0",
@@ -32,7 +33,9 @@
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^2.0.0",
-    "imagemin-pngquant": "^5.0.0"
+    "imagemin-pngquant": "^5.0.0",
+    "ttf2woff": "^2.0.1",
+    "ttf2woff2": "^2.0.3"
   },
   "config": {
     "directories": {
