Добавил сшивку PNG-спрайтов

--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^2.0.0",
+    "gulp.spritesmith": "^6.3.0",
     "imagemin-pngquant": "^5.0.0",
+    "merge-stream": "^1.0.1",
     "ttf2woff": "^2.0.1",
-    "ttf2woff2": "^2.0.3"
+    "ttf2woff2": "^2.0.3",
+    "vinyl-buffer": "^1.0.0"
   },
   "config": {
     "directories": {
